--- a/pinpad/hub-core-pinpad-complete-example/app/src/main/res/layout/activity_init_refund.xml
+++ b/pinpad/hub-core-pinpad-complete-example/app/src/main/res/layout/activity_init_refund.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/transaction_id_text"
+            android:id="@+id/nsu_host_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number" />
