--- a/pinpad/hub-core-pinpad-simple-example/app/src/main/res/layout/activity_main.xml
+++ b/pinpad/hub-core-pinpad-simple-example/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,48 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/refund_button"
+        android:id="@+id/transaction_scope_button"
         style="@style/Widget.Material3.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Testar Estorno"
+        android:layout_marginTop="40dp"
+        android:text="Testar Transação Scope"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/transaction_button" />
+        app:layout_constraintTop_toBottomOf="@+id/refund_sitef_button" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/transaction_button"
+        android:id="@+id/refund_sitef_button"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Testar Estorno SiTef"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transaction_sitef_button" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/refund_scope_button"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Testar Estorno Scope"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transaction_scope_button" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/transaction_sitef_button"
         style="@style/Widget.Material3.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Testar Transação"
+        android:text="Testar Transação SiTef"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
