feat: finish demo

--- a/pdv-pinpad/hub-core-pinpad-pdv-example/app/src/main/res/layout/activity_init_refund.xml
+++ b/pdv-pinpad/hub-core-pinpad-pdv-example/app/src/main/res/layout/activity_init_refund.xml
@@ -14,14 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginTop="18dp"
-        android:hint="@string/transaction_id"
+        android:hint="Nsu Host"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/transaction_id_text"
+            android:id="@+id/nsu_host_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number" />
