--- a/pdv-pinpad/hub-pinpad-pdv-example/app/src/main/res/layout/activity_settings.xml
+++ b/pdv-pinpad/hub-pinpad-pdv-example/app/src/main/res/layout/activity_settings.xml
@@ -53,13 +53,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/device_type_layout"
+            android:id="@+id/payment_provider_type_layout"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="18dp"
             android:layout_marginTop="18dp"
-            android:hint="@string/device_type"
+            android:hint="@string/payment_provider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/auth_token_text_layout">
@@ -82,7 +82,7 @@
             android:text="@string/next"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/device_type_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/payment_provider_type_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
